--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>模版</title>
+    <title>Document</title>
 </head>
 <body>
-    <!-- <input type="text" id="input">
-    <button id="oBtn">点击</button> -->
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/vue"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
+    <p id="root"></p>
+    <button id="btn">改变p的innerText</button>
 </body>
 </html>
